--- a/research-sympy.ipynb
+++ b/research-sympy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "df2a6300-2037-40fa-8c59-75762f304eee",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "355fef13-aaf7-4a8b-a579-178f09b7a8c6",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "a918bb9d-39b7-4268-87c5-d7e9f6dcfff5",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
        "Eq(f(x) - 2*Derivative(f(x), x) + Derivative(f(x), (x, 2)), sin(x))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,17 +132,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "3a931598-2bb0-4514-add3-98c583f3c951",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{d}{d t} \\operatorname{xNH}_{3}{\\left(t \\right)} = 2 k_{1} \\operatorname{xN}_{2}{\\left(t \\right)} + k_{10} \\operatorname{xNOrg}{\\left(t \\right)} - k_{2} \\operatorname{xNH}_{3}{\\left(t \\right)} - k_{6} \\operatorname{xNO}_{2}{\\left(t \\right)} \\operatorname{xNO}_{3}{\\left(t \\right)} + k_{7} \\operatorname{xNO}_{3}{\\left(t \\right)} - k_{9} \\operatorname{xNH}_{3}{\\left(t \\right)}$"
+       "$\\displaystyle \\frac{d}{d t} \\operatorname{xNH}_{3}{\\left(t \\right)} = 2 k_{1} + k_{10} - k_{2} - k_{6} + k_{7} - k_{9}$"
       ],
       "text/plain": [
-       "Eq(Derivative(xNH3(t), t), 2*k1*xN2(t) + k10*xNOrg(t) - k2*xNH3(t) - k6*xNO2(t)*xNO3(t) + k7*xNO3(t) - k9*xNH3(t))"
+       "Eq(Derivative(xNH3(t), t), 2*k1 + k10 - k2 - k6 + k7 - k9)"
       ]
      },
      "metadata": {},
@@ -151,10 +151,10 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{d}{d t} \\operatorname{xNO}_{3}{\\left(t \\right)} = k_{11} \\operatorname{xNOrg}{\\left(t \\right)} + k_{3} \\operatorname{xNO}_{2}{\\left(t \\right)} - k_{4} \\operatorname{xNO}_{3}{\\left(t \\right)} - k_{7} \\operatorname{xNO}_{3}{\\left(t \\right)} - k_{8} \\operatorname{xNO}_{3}{\\left(t \\right)}$"
+       "$\\displaystyle \\frac{d}{d t} \\operatorname{xNO}_{3}{\\left(t \\right)} = k_{11} + k_{3} - k_{4} - k_{7} - k_{8}$"
       ],
       "text/plain": [
-       "Eq(Derivative(xNO3(t), t), k11*xNOrg(t) + k3*xNO2(t) - k4*xNO3(t) - k7*xNO3(t) - k8*xNO3(t))"
+       "Eq(Derivative(xNO3(t), t), k11 + k3 - k4 - k7 - k8)"
       ]
      },
      "metadata": {},
@@ -163,10 +163,10 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{d}{d t} \\operatorname{xNO}_{2}{\\left(t \\right)} = k_{2} \\operatorname{xNH}_{3}{\\left(t \\right)} - k_{3} \\operatorname{xNO}_{2}{\\left(t \\right)} + k_{4} \\operatorname{xNO}_{3}{\\left(t \\right)} - 2 k_{5} \\operatorname{xNO}_{2}{\\left(t \\right)} - k_{6} \\operatorname{xNO}_{2}{\\left(t \\right)} \\operatorname{xNO}_{3}{\\left(t \\right)}$"
+       "$\\displaystyle \\frac{d}{d t} \\operatorname{xNO}_{2}{\\left(t \\right)} = k_{2} - k_{3} + k_{4} - 2 k_{5} - k_{6}$"
       ],
       "text/plain": [
-       "Eq(Derivative(xNO2(t), t), k2*xNH3(t) - k3*xNO2(t) + k4*xNO3(t) - 2*k5*xNO2(t) - k6*xNO2(t)*xNO3(t))"
+       "Eq(Derivative(xNO2(t), t), k2 - k3 + k4 - 2*k5 - k6)"
       ]
      },
      "metadata": {},
@@ -175,10 +175,10 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{d}{d t} \\operatorname{xNOrg}{\\left(t \\right)} = - k_{10} \\operatorname{xNOrg}{\\left(t \\right)} - k_{11} \\operatorname{xNOrg}{\\left(t \\right)} + k_{8} \\operatorname{xNO}_{3}{\\left(t \\right)} + k_{9} \\operatorname{xNH}_{3}{\\left(t \\right)}$"
+       "$\\displaystyle \\frac{d}{d t} \\operatorname{xNOrg}{\\left(t \\right)} = - k_{10} - k_{11} + k_{8} + k_{9}$"
       ],
       "text/plain": [
-       "Eq(Derivative(xNOrg(t), t), -k10*xNOrg(t) - k11*xNOrg(t) + k8*xNO3(t) + k9*xNH3(t))"
+       "Eq(Derivative(xNOrg(t), t), -k10 - k11 + k8 + k9)"
       ]
      },
      "metadata": {},
@@ -187,10 +187,10 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{d}{d t} \\operatorname{xN}_{2}{\\left(t \\right)} = - k_{1} \\operatorname{xN}_{2}{\\left(t \\right)} + k_{5} \\operatorname{xNO}_{2}{\\left(t \\right)} + k_{6} \\operatorname{xNO}_{2}{\\left(t \\right)} \\operatorname{xNO}_{3}{\\left(t \\right)}$"
+       "$\\displaystyle \\frac{d}{d t} \\operatorname{xN}_{2}{\\left(t \\right)} = - k_{1} + k_{5} + k_{6}$"
       ],
       "text/plain": [
-       "Eq(Derivative(xN2(t), t), -k1*xN2(t) + k5*xNO2(t) + k6*xNO2(t)*xNO3(t))"
+       "Eq(Derivative(xN2(t), t), -k1 + k5 + k6)"
       ]
      },
      "metadata": {},
@@ -199,10 +199,10 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{d}{d t} \\operatorname{ANH}_{3}{\\left(t \\right)} = \\frac{2 k_{1} \\left(\\operatorname{AN}_{2}{\\left(t \\right)} - \\operatorname{ANH}_{3}{\\left(t \\right)}\\right) \\operatorname{xN}_{2}{\\left(t \\right)} + k_{10} \\left(- \\operatorname{ANH}_{3}{\\left(t \\right)} + \\operatorname{ANOrg}{\\left(t \\right)}\\right) \\operatorname{xNOrg}{\\left(t \\right)} + k_{7} \\left(- \\operatorname{ANH}_{3}{\\left(t \\right)} + \\operatorname{ANO}_{3}{\\left(t \\right)}\\right) \\operatorname{xNO}_{3}{\\left(t \\right)}}{\\operatorname{xNH}_{3}{\\left(t \\right)}}$"
+       "$\\displaystyle \\frac{d}{d t} \\operatorname{ANH}_{3}{\\left(t \\right)} = \\frac{2 k_{1} \\left(\\operatorname{AN}_{2}{\\left(t \\right)} - \\operatorname{ANH}_{3}{\\left(t \\right)}\\right) + k_{10} \\left(- \\operatorname{ANH}_{3}{\\left(t \\right)} + \\operatorname{ANOrg}{\\left(t \\right)}\\right) + k_{7} \\left(- \\operatorname{ANH}_{3}{\\left(t \\right)} + \\operatorname{ANO}_{3}{\\left(t \\right)}\\right)}{\\operatorname{xNH}_{3}{\\left(t \\right)}}$"
       ],
       "text/plain": [
-       "Eq(Derivative(ANH3(t), t), (2*k1*(AN2(t) - ANH3(t))*xN2(t) + k10*(-ANH3(t) + ANOrg(t))*xNOrg(t) + k7*(-ANH3(t) + ANO3(t))*xNO3(t))/xNH3(t))"
+       "Eq(Derivative(ANH3(t), t), (2*k1*(AN2(t) - ANH3(t)) + k10*(-ANH3(t) + ANOrg(t)) + k7*(-ANH3(t) + ANO3(t)))/xNH3(t))"
       ]
      },
      "metadata": {},
@@ -211,10 +211,10 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{d}{d t} \\operatorname{ANO}_{3}{\\left(t \\right)} = \\frac{k_{11} \\left(- \\operatorname{ANO}_{3}{\\left(t \\right)} + \\operatorname{ANOrg}{\\left(t \\right)}\\right) \\operatorname{xNOrg}{\\left(t \\right)} + k_{2} \\left(\\operatorname{ANO}_{2}{\\left(t \\right)} - \\operatorname{ANO}_{3}{\\left(t \\right)}\\right) \\operatorname{xNH}_{3}{\\left(t \\right)}}{\\operatorname{xNO}_{3}{\\left(t \\right)}}$"
+       "$\\displaystyle \\frac{d}{d t} \\operatorname{ANO}_{3}{\\left(t \\right)} = \\frac{k_{11} \\left(- \\operatorname{ANO}_{3}{\\left(t \\right)} + \\operatorname{ANOrg}{\\left(t \\right)}\\right) + k_{2} \\left(\\operatorname{ANO}_{2}{\\left(t \\right)} - \\operatorname{ANO}_{3}{\\left(t \\right)}\\right)}{\\operatorname{xNO}_{3}{\\left(t \\right)}}$"
       ],
       "text/plain": [
-       "Eq(Derivative(ANO3(t), t), (k11*(-ANO3(t) + ANOrg(t))*xNOrg(t) + k2*(ANO2(t) - ANO3(t))*xNH3(t))/xNO3(t))"
+       "Eq(Derivative(ANO3(t), t), (k11*(-ANO3(t) + ANOrg(t)) + k2*(ANO2(t) - ANO3(t)))/xNO3(t))"
       ]
      },
      "metadata": {},
@@ -223,10 +223,10 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{d}{d t} \\operatorname{ANO}_{2}{\\left(t \\right)} = \\frac{k_{2} \\left(\\operatorname{ANH}_{3}{\\left(t \\right)} - \\operatorname{ANO}_{2}{\\left(t \\right)}\\right) \\operatorname{xNH}_{3}{\\left(t \\right)} + k_{4} \\left(- \\operatorname{ANO}_{2}{\\left(t \\right)} + \\operatorname{ANO}_{3}{\\left(t \\right)}\\right) \\operatorname{xNO}_{3}{\\left(t \\right)}}{\\operatorname{xNO}_{2}{\\left(t \\right)}}$"
+       "$\\displaystyle \\frac{d}{d t} \\operatorname{ANO}_{2}{\\left(t \\right)} = \\frac{k_{2} \\left(\\operatorname{ANH}_{3}{\\left(t \\right)} - \\operatorname{ANO}_{2}{\\left(t \\right)}\\right) + k_{4} \\left(- \\operatorname{ANO}_{2}{\\left(t \\right)} + \\operatorname{ANO}_{3}{\\left(t \\right)}\\right)}{\\operatorname{xNO}_{2}{\\left(t \\right)}}$"
       ],
       "text/plain": [
-       "Eq(Derivative(ANO2(t), t), (k2*(ANH3(t) - ANO2(t))*xNH3(t) + k4*(-ANO2(t) + ANO3(t))*xNO3(t))/xNO2(t))"
+       "Eq(Derivative(ANO2(t), t), (k2*(ANH3(t) - ANO2(t)) + k4*(-ANO2(t) + ANO3(t)))/xNO2(t))"
       ]
      },
      "metadata": {},
@@ -235,10 +235,10 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{d}{d t} \\operatorname{ANOrg}{\\left(t \\right)} = \\frac{k_{8} \\left(\\operatorname{ANO}_{3}{\\left(t \\right)} - \\operatorname{ANOrg}{\\left(t \\right)}\\right) \\operatorname{xNO}_{3}{\\left(t \\right)} + k_{9} \\left(\\operatorname{ANH}_{3}{\\left(t \\right)} - \\operatorname{ANOrg}{\\left(t \\right)}\\right) \\operatorname{xNH}_{3}{\\left(t \\right)}}{\\operatorname{xNOrg}{\\left(t \\right)}}$"
+       "$\\displaystyle \\frac{d}{d t} \\operatorname{ANOrg}{\\left(t \\right)} = \\frac{k_{8} \\left(\\operatorname{ANO}_{3}{\\left(t \\right)} - \\operatorname{ANOrg}{\\left(t \\right)}\\right) + k_{9} \\left(\\operatorname{ANH}_{3}{\\left(t \\right)} - \\operatorname{ANOrg}{\\left(t \\right)}\\right)}{\\operatorname{xNOrg}{\\left(t \\right)}}$"
       ],
       "text/plain": [
-       "Eq(Derivative(ANOrg(t), t), (k8*(ANO3(t) - ANOrg(t))*xNO3(t) + k9*(ANH3(t) - ANOrg(t))*xNH3(t))/xNOrg(t))"
+       "Eq(Derivative(ANOrg(t), t), (k8*(ANO3(t) - ANOrg(t)) + k9*(ANH3(t) - ANOrg(t)))/xNOrg(t))"
       ]
      },
      "metadata": {},
@@ -247,10 +247,10 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{d}{d t} \\operatorname{AN}_{2}{\\left(t \\right)} = \\frac{k_{5} \\left(- \\operatorname{AN}_{2}{\\left(t \\right)} + \\operatorname{ANO}_{2}{\\left(t \\right)}\\right) \\operatorname{xNO}_{2}{\\left(t \\right)} + k_{6} \\left(- \\operatorname{AN}_{2}{\\left(t \\right)} + \\operatorname{ANH}_{3}{\\left(t \\right)} \\operatorname{ANO}_{2}{\\left(t \\right)}\\right) \\operatorname{xNO}_{2}{\\left(t \\right)} \\operatorname{xNO}_{3}{\\left(t \\right)}}{\\operatorname{xN}_{2}{\\left(t \\right)}}$"
+       "$\\displaystyle \\frac{d}{d t} \\operatorname{AN}_{2}{\\left(t \\right)} = \\frac{k_{5} \\left(- \\operatorname{AN}_{2}{\\left(t \\right)} + \\operatorname{ANO}_{2}{\\left(t \\right)}\\right) + k_{6} \\left(- \\operatorname{AN}_{2}{\\left(t \\right)} + \\operatorname{ANH}_{3}{\\left(t \\right)} \\operatorname{ANO}_{2}{\\left(t \\right)}\\right)}{\\operatorname{xN}_{2}{\\left(t \\right)}}$"
       ],
       "text/plain": [
-       "Eq(Derivative(AN2(t), t), (k5*(-AN2(t) + ANO2(t))*xNO2(t) + k6*(-AN2(t) + ANH3(t)*ANO2(t))*xNO2(t)*xNO3(t))/xN2(t))"
+       "Eq(Derivative(AN2(t), t), (k5*(-AN2(t) + ANO2(t)) + k6*(-AN2(t) + ANH3(t)*ANO2(t)))/xN2(t))"
       ]
      },
      "metadata": {},
@@ -304,15 +304,15 @@
     "    return dcdts\n",
     "\n",
     "t= symbols(\"t\")\n",
-    "k_kinetics = np.repeat(1, 11).astype(np.uint8)\n",
-    "eqs = get_diff_eqs(t, CCTS(t), Parames(), k_kinetics)\n",
-    "for x in eqs:\n",
-    "    print(x)\n",
-    "\n",
-    "# k_kinetics = [1,1,0,1,1,0,0,1,0,1,0]\n",
+    "# k_kinetics = np.repeat(1, 11).astype(np.uint8)\n",
     "# eqs = get_diff_eqs(t, CCTS(t), Parames(), k_kinetics)\n",
     "# for x in eqs:\n",
-    "#     print(x)\n"
+    "#     print(x)\n",
+    "\n",
+    "k_kinetics = [0,0,0,0,0,0,0,0,0,0,0]\n",
+    "eqs = get_diff_eqs(t, CCTS(t), Parames(), k_kinetics)\n",
+    "for x in eqs:\n",
+    "    print(x)\n"
    ]
   },
   {
@@ -446,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
