--- a/research-lsq-rk.ipynb
+++ b/research-lsq-rk.ipynb
@@ -96,16 +96,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67f0625b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset.get_var_col_names()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "1c81a624-0229-427d-a14b-60724b2498a7",
    "metadata": {},
    "outputs": [],
@@ -113,7 +103,7 @@
     "\n",
     "def ltq_fit_rk(dataset, t_eval, c0,   k_kinetics, maxfev=2400, plot_trace=False, show_process=True, pbar=None, pbar_prefix=\"\"):\n",
     "\n",
-    "    ee = np.array(MY_EPSILON)\n",
+    "    \n",
     "    \n",
     "    def _error_loss(ks, *args):\n",
     "        dataset, c0, t_eval, pbar,loss_trace,r2_trace, ks_trace, pbar_prefix = args\n",
@@ -124,6 +114,9 @@
     "        df = dataset.get_df()\n",
     "        timelist = df['time'].values\n",
     "        ccts = dataset.get_real_ccts()\n",
+    "        ee = np.array(MY_EPSILON)\n",
+    "        ee = ee[real_index]\n",
+    "        \n",
     "        #------------------------\n",
     "\n",
     "        sol_res = solve_ivp(get_dcdts_for_solve_ivp(), (t_eval.min(), t_eval.max()), c0, t_eval=t_eval, method='Radau', args=(ks, k_kinetics))\n",
@@ -211,16 +204,8 @@
     "        for _ks in ks_trace:\n",
     "            axes[2].plot(X, _ks, alpha=0.6)\n",
     "\n",
-    "    return ks_res, r2_trace\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e40b21f-fd01-4eb9-a98b-3617e745b4c4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return ks_res, r2_trace\n",
+    "\n",
     "k_kinetics = np.repeat(1, 11).astype(np.uint8)\n",
     "\n",
     "t_eval = dataset.get_df()['time'].values\n",
@@ -238,12 +223,11 @@
     "import torch\n",
     "import os\n",
     "\n",
-    "def research_kk_list(kk_list_all, res_dict_save_path, bad_keys=[]):\n",
+    "def research_kk_list(kk_list_all, res_dict_save_path, bad_keys=[], restore=True):\n",
     "    # 保存计算的结果，并载入已经计算的结果\n",
     "    res_dict = {}\n",
     "    \n",
-    "    \n",
-    "    if os.path.exists(res_dict_save_path):\n",
+    "    if os.path.exists(res_dict_save_path) and restore:\n",
     "        res_dict = torch.load(res_dict_save_path)\n",
     "    # 保存的间隔\n",
     "    save_iter = 2\n",
@@ -260,8 +244,6 @@
     "\n",
     "    # 总进度条恢复进度\n",
     "    pbar = set_pbar_start(pbar, n)\n",
-    "\n",
-    "    \n",
     "\n",
     "    # 循环计算\n",
     "    for ii, k_kinetics in enumerate(kk_list_all):\n",
@@ -299,14 +281,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "kk_list_all = [\n",
     "    [0,1,1,1,1,1,1,1,1,0,1],\n",
     "    [0,1,1,1,1,1,1,1,1,1,1],\n",
     "    [1,1,1,1,1,1,1,1,1,0,1],\n",
     "    [1,1,1,1,1,1,1,1,1,1,1],\n",
     "    ]\n",
-    "rr = research_kk_list(kk_list_all, \"runtime/lsq_res_dict_possible.pt\");\n",
+    "rr = research_kk_list(kk_list_all, \"runtime/lsq_res_dict_possible.pt\", restore=False);\n",
     "for key, v in rr.items():\n",
     "    print(key, v)\n",
     "\n"
@@ -322,8 +303,9 @@
     "kk_list_all = [list(x) for x in product([0,1], repeat=11)]\n",
     "kk_list_all = kk_list_all[::-1]\n",
     "bad_keys = [\"11011010101\", \"10010100001\", \"01111011010\",\"01111010110\", \"01111010101\",\"01111001101\"]\n",
+    "bad_keys = []\n",
     "\n",
-    "research_kk_list(kk_list_all, \"runtime/lsq_res_dict.pt\", bad_keys=bad_keys)\n"
+    "research_kk_list(kk_list_all, \"runtime/lsq_res_dict_v2.pt\", bad_keys=bad_keys)\n"
    ]
   },
   {
@@ -416,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
