--- a/eval-saved-idata-v2.ipynb
+++ b/eval-saved-idata-v2.ipynb
@@ -171,7 +171,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pymcmain",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -185,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
