去除rate相关的API；去除real多余API；修复cct引用的严重bug

--- a/eval-saved-idata-v2.ipynb
+++ b/eval-saved-idata-v2.ipynb
@@ -41,7 +41,7 @@
     "res_path_list = glob.glob(\"saved_idata-v2/*\")\n",
     "dataset = MyDataset(\"dataset/data.csv\")\n",
     "df = dataset.get_df()\n",
-    "cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
+    "cct_names, error_names = dataset.get_var_col_names()\n",
     "\n",
     "\n",
     "title_str = \"k10,k_kinetics\"\n",
@@ -85,7 +85,7 @@
     "res_path_list = glob.glob(\"saved_idata-v2/*\")\n",
     "dataset = MyDataset(\"dataset/data.csv\")\n",
     "df = dataset.get_df()\n",
-    "cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
+    "cct_names, error_names = dataset.get_var_col_names()\n",
     "c0 = df[cct_names].values[0]\n",
     "t_eval = df['time'].values\n",
     "\n",
@@ -105,7 +105,7 @@
     "dataset_path = \"dataset/data.csv\"\n",
     "dataset = MyDataset(dataset_path)\n",
     "df = dataset.get_df()\n",
-    "cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
+    "cct_names, error_names = dataset.get_var_col_names()\n",
     "c0 = df[cct_names].values[0]\n",
     "t_eval = df['time'].values\n",
     "\n",
