--- a/eval.ipynb
+++ b/eval.ipynb
@@ -165,7 +165,7 @@
     "def plot_dataset(dataset, dataset_pred=None):\n",
     "    \n",
     "    df = dataset.get_df()\n",
-    "    cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
+    "    cct_names, error_names = dataset.get_var_col_names()\n",
     "    \n",
     "    cols = 5\n",
     "    rows = math.ceil(len(cct_names) / cols)\n",
@@ -324,7 +324,7 @@
     "    \n",
     "    errors = dataset.get_errors()\n",
     "    rates = dataset.get_rates()\n",
-    "    cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
+    "    cct_names, error_names = dataset.get_var_col_names()\n",
     "        \n",
     "    # 定义参数优化模型\n",
     "    mcmc_model = pm.Model()\n",
@@ -405,7 +405,7 @@
     "    \n",
     "    errors = dataset.get_errors()\n",
     "    rates = dataset.get_rates()\n",
-    "    cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
+    "    cct_names, error_names = dataset.get_var_col_names()\n",
     "    \n",
     "    \n",
     "    \n",
@@ -451,7 +451,7 @@
     "res_path_list = glob.glob(\"save_idata/*\")\n",
     "dataset = MyDataset(\"dataset/data.csv\")\n",
     "df = dataset.get_df()\n",
-    "cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
+    "cct_names, error_names = dataset.get_var_col_names()\n",
     "\n",
     "\n",
     "title_str = \"k10,k_kinetics\"\n",
@@ -480,7 +480,7 @@
     "res_path_list = glob.glob(\"save_idata/*\")\n",
     "dataset = MyDataset(\"dataset/data.csv\")\n",
     "df = dataset.get_df()\n",
-    "cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
+    "cct_names, error_names = dataset.get_var_col_names()\n",
     "\n",
     "res_csv = open(\"res_r2.csv\", 'w+', encoding=\"utf8\")\n",
     "\n",
