--- a/odes-exp03-orffff.ipynb
+++ b/odes-exp03-orffff.ipynb
@@ -58,7 +58,7 @@
     "def get_model(dataset, t_eval, k_kinetics, k_sigma_priors=0.01, kf_type=0):\n",
     "    df = dataset.get_df()\n",
     "    times = df['time'].values\n",
-    "    cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
+    "    cct_names, error_names = dataset.get_var_col_names()\n",
     "    ccts = dataset.get_cct()\n",
     "    \n",
     "    mcmc_model = pm.Model()\n",
@@ -101,7 +101,7 @@
     "t_eval = np.arange(0, 150, 5)\n",
     "dataset = MyDataset(\"dataset/data.csv\")\n",
     "df = dataset.get_df()\n",
-    "cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
+    "cct_names, error_names = dataset.get_var_col_names()\n",
     "\n",
     "c0 = df[cct_names].iloc[0].values\n",
     "dataset.set_as_sim_dataset(get_dcdts_for_scipy_odeint(), t_eval, c0, args=(ks, k_kinetics))\n",
@@ -544,7 +544,7 @@
     "t_eval = np.arange(0, 150, 5)\n",
     "\n",
     "dataset_new = MyDataset(\"dataset/data.csv\")\n",
-    "cct_names, rates_names, error_names = dataset_new.get_var_col_names()\n",
+    "cct_names, error_names = dataset_new.get_var_col_names()\n",
     "dataset_new.set_as_sim_dataset(get_dcdts_for_scipy_odeint(), t_eval, dataset_new.get_cct()[0], args=(ks_predict, k_kinetics))\n",
     "\n",
     "print(\"r2_loss\", r2_loss(dataset_new.get_cct(), dataset.get_cct()))\n",
