--- a/odes-exp04.ipynb
+++ b/odes-exp04.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "dataset_ori = MyDataset(db_csv_path)\n",
     "df_ori = dataset_ori.get_df()\n",
-    "cct_names, rates_names, error_names = dataset_ori.get_var_col_names()\n",
+    "cct_names, error_names = dataset_ori.get_var_col_names()\n",
     "c0 = df_ori[cct_names].iloc[0].values\n"
    ]
   },
@@ -93,7 +93,7 @@
     "\n",
     "dataset = MyDataset(db_csv_path)\n",
     "df = dataset.get_df()\n",
-    "cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
+    "cct_names, error_names = dataset.get_var_col_names()\n",
     "c0 = df[cct_names].iloc[0].values\n",
     "dataset.set_as_sim_dataset(t_eval, c0, args=(ks, k_kinetics))\n",
     "df = dataset.get_df()\n",
@@ -1101,7 +1101,7 @@
     "t_eval = np.array([0.5, 48, 96, 144])\n",
     "\n",
     "dataset_new = MyDataset(db_csv_path)\n",
-    "cct_names, rates_names, error_names = dataset_new.get_var_col_names()\n",
+    "cct_names, error_names = dataset_new.get_var_col_names()\n",
     "gt_s = dataset_new.get_cct()[0]\n",
     "\n",
     "dataset_new.set_as_sim_dataset(t_eval, pred_s, args=(ks_predict, k_kinetics))\n",
