--- a/research-lsq-rk.ipynb
+++ b/research-lsq-rk.ipynb
@@ -111,7 +111,7 @@
     "db_csv_path = \"dataset/data.csv\"\n",
     "dataset = MyDataset(db_csv_path)\n",
     "df = dataset.get_df()\n",
-    "cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
+    "cct_names, error_names = dataset.get_var_col_names()\n",
     "c0 = df[cct_names].iloc[0].values\n",
     "t_eval = dataset.get_df()['time'].values\n",
     "\n",
