--- a/research-mcmc-rk.ipynb
+++ b/research-mcmc-rk.ipynb
@@ -92,7 +92,7 @@
     "    \n",
     "    errors = dataset.get_errors()\n",
     "    rates = dataset.get_rates()\n",
-    "    cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
+    "    cct_names, error_names = dataset.get_var_col_names()\n",
     "        \n",
     "    # 定义参数优化模型\n",
     "    mcmc_model = pm.Model()\n",
@@ -155,7 +155,7 @@
     "\n",
     "dataset = MyDataset(\"dataset/data.csv\")\n",
     "df = dataset.get_df()\n",
-    "cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
+    "cct_names, error_names = dataset.get_var_col_names()\n",
     "\n",
     "# c0 = df[cct_names].iloc[0].values\n",
     "# dataset.set_as_sim_dataset(dcdt_func_for_odeint, t_eval, c0, args=(ks, k_kinetics))\n",
@@ -314,7 +314,7 @@
     "    df = dataset.get_df()\n",
     "    times = df['time'].values\n",
     "    \n",
-    "    cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
+    "    cct_names, error_names = dataset.get_var_col_names()\n",
     "    \n",
     "    c_df = pd.DataFrame(columns=cct_names)\n",
     "    t_n = len(times)\n",
