--- a/research-sunode-model.ipynb
+++ b/research-sunode-model.ipynb
@@ -69,7 +69,7 @@
     "\n",
     "dataset_ori = MyDataset(db_csv_path)\n",
     "df_ori = dataset_ori.get_df()\n",
-    "cct_names, rates_names, error_names = dataset_ori.get_var_col_names()\n",
+    "cct_names, error_names = dataset_ori.get_var_col_names()\n",
     "c0 = df_ori[cct_names].iloc[0].values\n",
     "\n",
     "# 假设都是一级动力学\n",
@@ -83,7 +83,7 @@
     "\n",
     "dataset = MyDataset(db_csv_path)\n",
     "df = dataset.get_df()\n",
-    "cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
+    "cct_names, error_names = dataset.get_var_col_names()\n",
     "c0 = df[cct_names].iloc[0].values\n",
     "\n",
     "dataset.set_as_sim_dataset(t_eval, c0, t0=0.5, args=(ks, k_kinetics))\n",
@@ -188,7 +188,7 @@
     "    \n",
     "    errors = dataset.get_errors()\n",
     "    rates = dataset.get_rates()\n",
-    "    cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
+    "    cct_names, error_names = dataset.get_var_col_names()\n",
     "        \n",
     "    # 定义参数优化模型\n",
     "    mcmc_model = pm.Model()\n",
