--- a/ss2.ipynb
+++ b/ss2.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "dataset_ori = core.MyDataset(db_csv_path)\n",
     "df_ori = dataset_ori.get_df()\n",
-    "cct_names, rates_names, error_names = dataset_ori.get_var_col_names()\n",
+    "cct_names, error_names = dataset_ori.get_var_col_names()\n",
     "c0 = df_ori[cct_names].iloc[0].values\n",
     "\n",
     "# 假设都是一级动力学\n",
@@ -62,7 +62,7 @@
     "\n",
     "dataset = core.MyDataset(db_csv_path)\n",
     "df = dataset.get_df()\n",
-    "cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
+    "cct_names, error_names = dataset.get_var_col_names()\n",
     "c0 = df[cct_names].iloc[0].values\n",
     "dataset.set_as_sim_dataset(t_eval, c0, args=(ks, k_kinetics))\n",
     "df = dataset.get_df()\n",
