--- a/odes-exp03.ipynb
+++ b/odes-exp03.ipynb
@@ -147,7 +147,7 @@
     "def get_model(dataset, t_eval, k_kinetics, k_sigma_priors=0.01, kf_type=0, distance=\"gaussian\", epsilon=1):\n",
     "    df = dataset.get_df()\n",
     "    times = df['time'].values\n",
-    "    cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
+    "    cct_names, error_names = dataset.get_var_col_names()\n",
     "    ccts = dataset.get_cct()\n",
     "\n",
     "    mcmc_model = pm.Model()\n",
@@ -190,7 +190,7 @@
     "\n",
     "    errors = dataset.get_errors()\n",
     "    rates = dataset.get_rates()\n",
-    "    cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
+    "    cct_names, error_names = dataset.get_var_col_names()\n",
     "\n",
     "    # 定义参数优化模型\n",
     "    mcmc_model = pm.Model()\n",
@@ -253,7 +253,7 @@
     "\n",
     "dataset = MyDataset(db_csv_path)\n",
     "df = dataset.get_df()\n",
-    "cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
+    "cct_names, error_names = dataset.get_var_col_names()\n",
     "\n",
     "c0 = df[cct_names].iloc[0].values\n",
     "dataset.set_as_sim_dataset(dcdt_func_for_odeint, t_eval, c0, args=(ks, k_kinetics))\n",
@@ -1060,7 +1060,7 @@
     "t_eval = np.array([0.5, 48, 96, 144])\n",
     "\n",
     "dataset_new = MyDataset(db_csv_path)\n",
-    "cct_names, rates_names, error_names = dataset_new.get_var_col_names()\n",
+    "cct_names, error_names = dataset_new.get_var_col_names()\n",
     "gt_s = dataset_new.get_cct()[0]\n",
     "\n",
     "dataset_new.set_as_sim_dataset(dcdt_func_for_odeint, t_eval, gt_s, args=(ks_predict, k_kinetics))\n",
